hice cambios de texto

--- a/html/web.html
+++ b/html/web.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Mi Página Web</h1>
+        <h1>Mi pagina Web Sam </h1>
         <nav>
             <ul>
                 <li><a href="#">Inicio</a></li>
